--- a/API_midleware/API_midleware.csproj
+++ b/API_midleware/API_midleware.csproj
@@ -47,16 +47,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ApiHelper.cs" />
-    <Compile Include="HeaderModel.cs" />
-    <Compile Include="IdModel.cs" />
+    <Compile Include="CustomApi.cs" />
+    <Compile Include="Constants.cs" />
+    <Compile Include="Models\HeaderModel.cs" />
+    <Compile Include="Models\ImdbModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="YoutubeApi.cs" />
-    <Compile Include="YoutubeModel.cs" />
+    <Compile Include="Trailer.cs" />
+    <Compile Include="ApiHelper.cs" />
+    <Compile Include="Models\YoutubeModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
