--- a/API_midleware/Middleware_Api_Lib.csproj
+++ b/API_midleware/Middleware_Api_Lib.csproj
@@ -47,13 +47,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CustomApi.cs" />
+    <Compile Include="MiddlewareApi.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="Models\HeaderModel.cs" />
     <Compile Include="Models\ImdbModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Trailer.cs" />
-    <Compile Include="ApiHelper.cs" />
+    <Compile Include="MiddlewareApiHelper.cs" />
     <Compile Include="Models\YoutubeModel.cs" />
   </ItemGroup>
   <ItemGroup>
