added api url to config

--- a/DEPT_API/Web.config
+++ b/DEPT_API/Web.config
@@ -9,6 +9,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="apiUrl" value="https://localhost:44326/api/Values?search=" />
   </appSettings>
   <system.web>
     <customErrors mode ="RemoteOnly"></customErrors>
