--- a/DEPT_API/DEPT_API.csproj
+++ b/DEPT_API/DEPT_API.csproj
@@ -158,6 +158,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helper\CacheData.cs" />
     <Compile Include="Models\TrailerModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
