--- a/DEPT_API/Views/Web.config
+++ b/DEPT_API/Views/Web.config
@@ -17,7 +17,7 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
-        <add namespace="DEPT_API" />
+        <add namespace="DEPT_Api" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
